fixed Наша команда on tablet

--- a/sass/base/_our__team_list.scss
+++ b/sass/base/_our__team_list.scss
@@ -10,6 +10,14 @@
     display: block;
     @media screen and (min-width: 768px) {
       display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+      margin-top: -30px;
+      padding-left: 15px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
       justify-content: space-between;
     }
   }
